src/objects/PMD_MFG_CFC_Site__c.object
<CustomObject>
    <fields>
        <fullName>CFC_Site__c</fullName>
        <label>CFC Site</label>
        <picklist>
            <picklistValues>
                <fullName>AMK_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIMA_WUJIANG_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYD_SHZN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CELLON_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHENG_UEI_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI_MEI_LNG_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI_MEI_TWN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI_MEI_TY_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPAL_COMM_NJ_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPAL_COMM_TWN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_BR_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_CHN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_CHN_DMN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_FTW_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_IND_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_JPN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_MAL_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_TJ_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORT_WORTH_TX_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_GL_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_IND_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_LH_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_MX_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_SHZN_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_TJ_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_TY_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXLINK_CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIP_TJ_CFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFG_Site__c</fullName>
        <label>MFG Site</label>
        <picklist>
            <picklistValues>
                <fullName>AMK_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIMA_WUJIANG_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYD_HZO_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEI_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CELLON_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHENG_UEI_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI_MEI_LNG_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI_MEI_TWN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHI_MEI_TY_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPAL_COMM_NJ_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPAL_COMM_TWN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPAL_ELEC_TWN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_BR_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_CHN_DMN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_CHN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_FTW_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_JPN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_MAL_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEX_TJ_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_GL_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_IND_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_LANGFANG_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_LH_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_MX_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_SHZN_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_TJ_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXCONN_TY_MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOXLINK_MFG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matrix_ID__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Matrix ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PMD_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>PMD External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product Name</label>
        <referenceTo>PMD_Product__c</referenceTo>
        <relationshipLabel>MFG CFC Sites (PMD)</relationshipLabel>
        <relationshipName>MFG_CFC_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_PDM_ID__c</fullName>
        <formula>Product_ID__r.Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product_PDM_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Zone__c</fullName>
        <label>Market Region - Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Asia - Australia &amp; NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - Other SWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia - South East Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - C Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - E Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - N Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - S Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA - Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China - China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China - Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China - Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - LA1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - LA2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America - Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America - Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America - USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>LEFT(TEXT(Region_Zone__c),
FIND(&quot; - &quot;, TEXT(Region_Zone__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Code__c</fullName>
        <label>Zone Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Friendly_Name__c</fullName>
        <label>Zone Friendly Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <formula>RIGHT(TEXT(Region_Zone__c),

LEN(TEXT(Region_Zone__c)) -

FIND(&quot; - &quot;, TEXT(Region_Zone__c)) - 2
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>MFG CFC Site (PMD)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MFG_Site__c</columns>
        <columns>CFC_Site__c</columns>
        <columns>Region_Zone__c</columns>
        <columns>Zone_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Zone_Code__c</columns>
        <columns>Product_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MFG CFC Sites (PMD)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>